Start File Encrpytion

--- a/paks-auxillary/package.json
+++ b/paks-auxillary/package.json
@@ -21,11 +21,11 @@
     "express-handlebars": "*",
     "express-messages": "*",
     "express-session": "*",
-    "express-validator": "*",
+    "express-validator": "5.3.1",
     "formidable": "^1.1.1",
     "fs": "0.0.2",
     "mongodb": "*",
-    "mongoose": "^4.11.1",
+    "mongoose": "^5.7.7",
     "node-cache": "^4.1.1",
     "passport": "*",
     "passport-http": "*",
